fix: number out of bound in pagination

--- a/src/styles/_cont.scss
+++ b/src/styles/_cont.scss
@@ -2436,16 +2436,17 @@
     }
   }
   .num {
-    border-radius: 50%;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    width: 40px;
+    width: auto;
     height: 40px;
     color: #888;
     border: 1px solid #ddd;
     flex: 0 0 40px;
+    padding: 0 10px;
     @include bg_change(0.3s);
     @media #{$pc} {
       &:hover {
